<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/linearLayoutWordAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_child_name" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_wordadd" />

        <ListView
            android:id="@+id/listView"
            style="@style/Widget.AppCompat.ListView"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@android:drawable/editbox_background"
            android:transcriptMode="alwaysScroll"></ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:background="@android:drawable/editbox_background"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/btnDeleteAll"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/btn_delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTTS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutWordAdd"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_voice_pitch"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/seekPitch"
            style="@android:style/Widget.DeviceDefault.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:progress="10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_voice_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/seekSpeed"
            style="@android:style/Widget.DeviceDefault.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:minHeight="40dp"
            android:progress="10" />

        <Button
            android:id="@+id/btnTest"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_test" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSaveExit"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayoutTTS"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:width="150dp"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btnExit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:width="150dp"
            android:text="@string/btn_exit" />
    </LinearLayout>


</RelativeLayout>